--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,17 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 				<version>1.4.193</version>
+
+
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
